# proxycast

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: README.md
scripts/playwright-login/: README.md  browser-context.js  index.js  oauth-handler.js  package.json
scripts/playwright-login/test/: browser-config.property.test.js  oauth-url.property.test.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  lib.rs
src-tauri/src/agent/protocols/: openai.rs
src-tauri/src/agent/tools/: mod.rs
src-tauri/src/app/: bootstrap.rs  runner.rs  state.rs
src-tauri/src/app/commands/: config.rs
src-tauri/src/commands/: auto_fix_cmd.rs  machine_id_cmd.rs  mod.rs  model_registry_cmd.rs  models_cmd.rs  orchestrator_cmd.rs  plugin_rpc_cmd.rs  provider_pool_cmd.rs  terminal_cmd.rs
src-tauri/src/config/: mod.rs  tests.rs  types.rs  yaml.rs
src-tauri/src/config/observer/: events.rs  manager.rs  mod.rs  observers.rs  subject.rs  traits.rs
src-tauri/src/converter/: README.md  anthropic_to_openai.rs  openai_to_antigravity.rs
src-tauri/src/credential/: registry.rs
src-tauri/src/data/: local_models.rs  mod.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/injection/: types.rs
src-tauri/src/middleware/: management_auth.rs
src-tauri/src/models/: machine_id.rs  mod.rs  model_registry.rs  openai.rs  provider_pool_model.rs
src-tauri/src/orchestrator/: orchestrator.rs  pool_builder.rs
src-tauri/src/plugin/installer/: registry.rs
src-tauri/src/processor/: mod.rs  tests.rs
src-tauri/src/processor/steps/: routing.rs
src-tauri/src/providers/: README.md  antigravity.rs  codex.rs  iflow.rs  kiro.rs  mod.rs  qwen.rs
src-tauri/src/router/: mod.rs  provider_router.rs  rules.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: api.rs  credentials_api.rs  kiro_credential.rs  management.rs  provider_calls.rs  websocket.rs
src-tauri/src/services/: README.md  api_key_provider_service.rs  live_sync.rs  machine_id_service.rs  mod.rs  model_registry_service.rs  provider_pool_service.rs  token_cache_service.rs
src-tauri/src/stream/parsers/: aws_event_stream.rs
src-tauri/src/terminal/: README.md  error.rs  events.rs  mod.rs  pty_session.rs  session_manager.rs  tests.rs
src-tauri/src/tray/: manager.rs
src/components/: Dashboard.tsx  Models.tsx  README.md  Sidebar.tsx
src/components/agent/chat/: types.ts
src/components/agent/chat/components/: ChatNavbar.tsx  StreamingRenderer.tsx
src/components/agent/chat/hooks/: useAgentChat.ts  useStreamingText.ts
src/components/api-server/: ApiServerPage.test.ts  ApiServerPage.tsx  EnhancedModelsTab.tsx
src/components/blocks/: BlockFrame.tsx  PreviewBlock.tsx  TerminalBlock.tsx  WebBlock.tsx
src/components/clients/: ProviderForm.tsx
src/components/config/: ConfigManagementPage.tsx  index.ts
src/components/dev/: ComponentDebugOverlay.tsx  index.ts
src/components/extensions/: ExtensionsPage.tsx
src/components/layout/: PanelLayout.tsx  layout.css
src/components/model-selector/: EnhancedModelList.tsx  ModelList.tsx  ModelSelector.tsx  ProviderModelSelector.tsx  index.ts
src/components/plugins/: PluginManager.tsx  PluginUIRenderer.tsx
src/components/preview/: ImagePreview.tsx  MarkdownPreview.tsx  preview.css
src/components/prompts/: PromptsPage.tsx
src/components/provider-pool/: AddCredentialModal.tsx  ModelRegistryTab.tsx  OAuthPluginTab.tsx  ProviderPoolPage.tsx  README.md  RelayProvidersSection.tsx  index.ts
src/components/provider-pool/api-key/: AddCustomProviderModal.tsx  ImportExportDialog.tsx  ProviderModelList.tsx  ProviderSetting.tsx  index.ts  providerTypeMapping.ts
src/components/provider-pool/credential-forms/: BrowserModeSelector.tsx  GeminiFormStandalone.tsx  KiroForm.tsx  PlaywrightErrorDisplay.tsx  PlaywrightInstallGuide.tsx  index.ts
src/components/settings/: DeveloperSettings.tsx  RemoteManagementSettings.tsx  SettingsPage.tsx  index.ts
src/components/switch/: ProviderForm.tsx
src/components/terminal/: README.md  TerminalPage.tsx  TerminalSearch.tsx  fitaddon.ts  index.ts  terminal.css  termwrap.ts
src/components/tools/: ToolsPage.tsx
src/components/tools/machine-id/: MachineIdHistoryPanel.tsx  MachineIdInfoPanel.tsx  MachineIdManagePanel.tsx  MachineIdSystemPanel.tsx  MachineIdTool.tsx
src/components/ui/: radio-group.tsx  separator.tsx  sonner.tsx
src/contexts/: ComponentDebugContext.tsx
src/hooks/: README.md  index.ts  use-toast.ts  useConfigEvents.ts  useDeepLink.ts  useModelRegistry.ts  useSwitch.ts  useTauri.ts
src/icons/providers/: utils.ts
src/lib/: README.md  configEventManager.ts  terminal-api.ts
src/lib/api/: machineId.ts  modelRegistry.ts  orchestrator.ts  providerPool.ts
src/lib/blocks/: blockStore.ts  index.ts  registry.ts  types.ts
src/lib/errors/: README.md  index.ts  playwrightErrors.ts
src/lib/plugin-components/: index.ts
src/lib/plugin-loader/: PluginUIRenderer.tsx  index.ts
src/lib/plugin-sdk/: sdk.ts
src/lib/terminal/: themes.ts
src/lib/types/: modelRegistry.ts
src/lib/workspace/: types.ts  workspaceStore.ts
src/pages/: README.md
